force-app/main/default/objects/BMCServiceDesk__DiscoveryAuditLog__c/BMCServiceDesk__DiscoveryAuditLog__c.object-meta.xml
<CustomObject>
    <description>Stores details about Remedyforce Discovery Server events - server creation or deletion request, change or reset password, enabling or disabling Remedyforce discovery, alert email messages sent, success or failure messages sent to keep the server alive.</description>
    <label>Discovery Audit Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>