force-app/main/default/objects/BMCServiceDesk__DiscoveryAuditLog__c/fields/BMCServiceDesk__Comment__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Comment__c</fullName>
    <description>Stores a text comment related to the operation corresponding to the log entry.</description>
    <inlineHelpText>Stores a text comment related to the operation corresponding to the log entry.</inlineHelpText>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>