force-app/main/default/objects/BMCServiceDesk__DiscoveryAuditLog__c/fields/BMCServiceDesk__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ErrorMessage__c</fullName>
    <description>Stores error message (if any) captured during the operation corresponding to the log entry.</description>
    <inlineHelpText>Stores error message (if any) captured during the operation corresponding to the log entry.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>