force-app/main/default/objects/BMCServiceDesk__DiscoveryAuditLog__c/fields/BMCServiceDesk__Operation__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Operation__c</fullName>
    <description>Stores the name of the operation performed corresponding to the log entry.</description>
    <inlineHelpText>Stores the name of the operation performed corresponding to the log entry.</inlineHelpText>
    <label>Operation ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>